force-app/main/default/objects/Integration_Log__c/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <description>소요 시간(ms)</description>
    <label>Duration Ms</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>