force-app/main/default/objects/Integration_Log__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>연동 유형</description>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Route</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Messaging</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>