force-app/main/default/objects/Integration_Log__c/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>성공 여부</description>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>