force-app/main/default/objects/Integration_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>연관 레코드 Id(Work Order, Invoice 등)</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>