force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Integration_Type__c</columns>
    <columns>Is_Success__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Endpoint__c</columns>
    <columns>Duration_Ms__c</columns>
    <columns>Related_Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <label>All</label>
</ListView>